--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
   <link rel="stylesheet" href="./css/media.css">
-   <link rel="stylesheet" href="./css/main.css">
-<!--  <link rel="stylesheet" href="./css/main_test.css">-->
+  <link rel="stylesheet" href="./css/main.css">
+  <!--  <link rel="stylesheet" href="./css/main_test.css">-->
 
   <title>Brain Fors</title>
 </head>
@@ -33,7 +33,7 @@
 
       <ul class="nav-list media_hide">
         <li class="nav-link-item"><a href="#" class="nav-link active">Home</a></li>
-        <li class="nav-link-item"><a href="#" class="nav-link">About</a></li>
+        <li class="nav-link-item"><a href="about.html" class="nav-link">About</a></li>
         <li class="nav-link-item"><a href="#" class="nav-link">Contact us</a></li>
         <li class="nav-link-item"><a href="#" class="nav-link">Blog</a></li>
       </ul>
@@ -109,23 +109,24 @@
   <!-- slider block start -->
   <div class="slider_content">
     <!-- slid1 start -->
-    <div class="_slide slide_1 active"><img class="more_about_img" src="./img/1.jpg" alt="">
+    <div class="_slide slide_1 active">
+      <div class="more_about_img img_background img_1"></div>
       <div class="slide-overlay"></div>
       <div class="content_block content_block1">
-        <h1 class="content-title">Brain Fors</h1>
-        <div class="content-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-          Reprehenderit voluptas sit non nostrum officiis ex? Illo nisi suscipit aut dolorum.
+        <h1 class="content-title">our story</h1>
+        <div class="content-text">EVERY ACCOMPLISHMENT STARTS WITH MOTIVATION AND THE COURAGE TO TRY
         </div>
       </div>
       <div class="more_about_block">
         <div class="about_content">
-          <h2 class="about_content_title">Brain Fors</h2>
-          <p class="about_content_text">Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-            Voluptatibus maxime, quasi eius beatae ipsam mollitia sequi soluta facere laudantium
-            libero hic, omnis tempore rerum consequatur harum laboriosam reiciendis accusantium
-            minima voluptatem aut perspiciatis suscipit necessitatibus animi?
-            Veritatis incidunt molestiae possimus quidem nam at!
-            Autem quos quibusdam assumenda mollitia modi pariatur.</p>
+          <h2 class="about_content_title">EVERY ACCOMPLISHMENT STARTS WITH MOTIVATION AND THE COURAGE TO TRY</h2>
+          <p class="about_content_text">In 2016, when Brain Fors was founded, there were 2 main goals: to base the
+            company
+            in Gyumri, enabling local talented professionals to find work in their hometown and deliver services of high
+            quality.
+            Today, we are a rooted technology-intensive company that is proud to deliver a comprehensive suite of
+            solutions comprising of web consultancy, custom software and web development, software and web application
+            testing.</p>
         </div>
 
       </div>
@@ -138,23 +139,20 @@
     <!-- slid1 end -->
 
     <!-- slid2 start -->
-    <div class="_slide slide_2"><img class="more_about_img" src="./img/6.jpg" alt="">
+    <div class="_slide slide_2">
+      <div class="more_about_img img_background img_2"></div>
       <div class="slide-overlay"></div>
       <div class="content_block content_block2">
-        <h2 class="content-title">Brain Fors</h2>
-        <div class="content-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-          Reprehenderit voluptas sit non nostrum officiis ex? Illo nisi suscipit aut dolorum.
-        </div>
+        <h2 class="content-title">our slogan and vision</h2>
+        <div class="content-text">WE TURN BRAINY IDEAS INTO GREAT PRODUCT</div>
       </div>
       <div class="more_about_block">
         <div class="about_content">
-          <h2 class="about_content_title">Brain Fors</h2>
-          <p class="about_content_text">Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-            Voluptatibus maxime, quasi eius beatae ipsam mollitia sequi soluta facere laudantium
-            libero hic, omnis tempore rerum consequatur harum laboriosam reiciendis accusantium
-            minima voluptatem aut perspiciatis suscipit necessitatibus animi?
-            Veritatis incidunt molestiae possimus quidem nam at!
-            Autem quos quibusdam assumenda mollitia modi pariatur.</p>
+          <h2 class="about_content_title">WE TURN BRAINY IDEAS INTO GREAT PRODUCT</h2>
+          <p class="about_content_text"> We strive to offer software solutions that help businesses grow and do it with
+            the utmost care, responsibility and love turning each brainy idea into great product.
+            We follow proven and time-tested software development methodologies and its expert personnel makes sure that
+            risks are significantly minimized, if not eliminated completely.</p>
         </div>
 
       </div>
@@ -167,23 +165,23 @@
     <!-- slid2 end -->
 
     <!-- slid3 start -->
-    <div class="_slide slide_3"><img class="more_about_img" src="./img/2.jpg" alt="">
+    <div class="_slide slide_3">
+      <div class="more_about_img img_background img_3"></div>
       <div class="slide-overlay"></div>
       <div class="content_block content_block3">
-        <h2 class="content-title">Brain Fors</h2>
-        <div class="content-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-          Reprehenderit voluptas sit non nostrum officiis ex? Illo nisi suscipit aut dolorum.
-        </div>
+        <h2 class="content-title">our commitment to quality</h2>
+        <div class="content-text">EACH CHALLANGE IS A NEW OPPORTUNITY FOR US</div>
       </div>
       <div class="more_about_block">
         <div class="about_content">
-          <h2 class="about_content_title">Brain Fors</h2>
-          <p class="about_content_text">Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-            Voluptatibus maxime, quasi eius beatae ipsam mollitia sequi soluta facere laudantium
-            libero hic, omnis tempore rerum consequatur harum laboriosam reiciendis accusantium
-            minima voluptatem aut perspiciatis suscipit necessitatibus animi?
-            Veritatis incidunt molestiae possimus quidem nam at!
-            Autem quos quibusdam assumenda mollitia modi pariatur.</p>
+          <h2 class="about_content_title">EACH CHALLANGE IS A NEW OPPORTUNITY FOR US</h2>
+          <p class="about_content_text">Bain Fors has proven to be a reliable partner, due to our broad experience in
+            realizing complex projects.
+            We believe we can provide cost effective service & support allowing you to get the best from your IT
+            investment. Our customers range from local mid and large-size enterprises up to big foreign corporations. We
+            follow proven and time-tested software development methodologies and we always make sure that our technical
+            team is resourced appropriately for the ultimate benefit of our clients.
+          </p>
         </div>
       </div>
       <div class="scrolle_down_respons">
@@ -195,23 +193,24 @@
     <!-- slid3 end -->
 
     <!-- slid4 start -->
-    <div class="_slide slide_4"><img class="more_about_img" src="./img/5.jpg" alt="">
+    <div class="_slide slide_4">
+      <div class="more_about_img img_background img_4"></div>
+
       <div class="slide-overlay"></div>
       <div class="content_block content_block4">
-        <h2 class="content-title">Brain Fors</h2>
-        <div class="content-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-          Reprehenderit voluptas sit non nostrum officiis ex? Illo nisi suscipit aut dolorum.
-        </div>
+        <h2 class="content-title">our team</h2>
+        <div class="content-text">OUR KEY TO SUCCESS IS OUR STRONG AND TRUSTING TEAM</div>
       </div>
       <div class="more_about_block">
         <div class="about_content">
-          <h2 class="about_content_title">Brain Fors</h2>
-          <p class="about_content_text">Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-            Voluptatibus maxime, quasi eius beatae ipsam mollitia sequi soluta facere laudantium
-            libero hic, omnis tempore rerum consequatur harum laboriosam reiciendis accusantium
-            minima voluptatem aut perspiciatis suscipit necessitatibus animi?
-            Veritatis incidunt molestiae possimus quidem nam at!
-            Autem quos quibusdam assumenda mollitia modi pariatur.</p>
+          <h2 class="about_content_title">OUR KEY TO SUCCESS IS OUR STRONG AND TRUSTING TEAM</h2>
+          <p class="about_content_text"> One of the most important keys to business success is its strong and talented
+            team. Here in Brain Fors we also add devotion to these two. Brain Fors has a team of talented, skilled, and
+            experienced software, web, and mobile app developers and our team members are passionate and dedicated to
+            what they do.
+            During those years Brain Fors team has been and continues growing, being supplemented by new professionals
+            that share the same vision with the company.
+          </p>
         </div>
       </div>
       <div class="scrolle_down_respons">
@@ -265,7 +264,7 @@
 </script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"></script>
 <script src="https://kit.fontawesome.com/4286680757.js" crossorigin="anonymous"></script>
- <script src="./js/script.js"></script>
+<script src="./js/script.js"></script>
 <!--<script src="./js/script_test.js"></script>-->
 
 </body>
