--- a/contactUs.html
+++ b/contactUs.html
@@ -35,8 +35,8 @@
 
       <ul class="nav-list media_hide">
         <li class="nav-link-item"><a href="index.html?reload=false" class="nav-link">Home</a></li>
-        <li class="nav-link-item"><a href="javascript:void(0)" class="nav-link active">About</a></li>
-        <li class="nav-link-item"><a href="contactUs.html" class="nav-link">Contact us</a></li>
+        <li class="nav-link-item"><a href="javascript:void(0)" class="nav-link ">About</a></li>
+        <li class="nav-link-item"><a href="javascript:void(0)" class="nav-link active">Contact us</a></li>
         <li class="nav-link-item"><a href="#" class="nav-link">Blog</a></li>
       </ul>
       <div class='nav-toggle'>
@@ -51,37 +51,28 @@
   </div>
 </div>
 <!-- navbar end  -->
-
-
-  <div class="main_about">
-  <div class="container-fluid">
-    <div class="carousel_block">
-
-      <div class="carousel_staff staff_view ">
+<div class="contact_us_main">
+  <div class="bg_fon"></div>
+  <div class="bg-baner">
+      <div class="baner_title">
+        <h2 class="hi_content">HELLO</h2>
+        <p class="baner_description">Fill in the below form to get along with us! It becomes a lot more amazing when we get together.</p>
+      </div>
+    <div class="contact_form">
+      <form>
         <div class="row">
-          <div class="col-12 loader_carousel">
-            <div class="circle">
-              <div class="circle__item">
-                <i class="fas fa-redo circle__icon"></i>
-                <svg class="circle__spinner" viewBox="0 0 50 50">
-                  <circle cx="25" cy="25" r="20" fill="none" stroke="rgba(0,0,0,0.3)" stroke-width="1">
-                  </circle>
-                  <circle class="path" cx="25" cy="25" r="20" fill="none" stroke="#93bfec" stroke-width="1">
-                  </circle>
-                </svg>
-              </div>
-            </div>
+          <div class="col-6">
+
+          </div>
+          <div class="col-6">
+
           </div>
         </div>
-        <div class="row" id="workers">
-
-        </div>
-      </div>
+      </form>
     </div>
-
+  </div>
 </div>
 
-</div>
 
 <!-- <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script> -->
 <script src="./js/lib/jquery-1.11.0.min.js"></script>
