Add project page

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
 <!-- navbar start  -->
-<div class="nav-fixed">
+<div class="nav-fixed home_page_navbar">
 
   <div class="container">
     <nav class="heder-nav">
@@ -35,7 +35,7 @@
         <li class="nav-link-item"><a href="javascript:void(0)" class="nav-link active">Home</a></li>
         <li class="nav-link-item"><a href="about.html" class="nav-link">About</a></li>
         <li class="nav-link-item"><a href="contactUs.html" class="nav-link">Contact us</a></li>
-        <li class="nav-link-item"><a href="#" class="nav-link">Blog</a></li>
+        <li class="nav-link-item"><a href="project.html" class="nav-link">Project</a></li>
       </ul>
       <div class='nav-toggle'>
         <span></span>
