--- a/about.html
+++ b/about.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="./css/main.css">
   <link rel="stylesheet" href="./css/media.css">
   <link rel="stylesheet" href="./css/about.css">
+  <link rel="stylesheet" href="./css/lib/OverlayScrollbars.css">
   <!--  <link rel="stylesheet" href="./css/main_test.css">-->
 
   <title>About Staff</title>
@@ -37,7 +38,7 @@
         <li class="nav-link-item"><a href="index.html?reload=false" class="nav-link">Home</a></li>
         <li class="nav-link-item"><a href="javascript:void(0)" class="nav-link active">About</a></li>
         <li class="nav-link-item"><a href="contactUs.html" class="nav-link">Contact us</a></li>
-        <li class="nav-link-item"><a href="#" class="nav-link">Blog</a></li>
+        <li class="nav-link-item"><a href="project.html" class="nav-link">Project</a></li>
       </ul>
       <div class='nav-toggle'>
         <span></span>
@@ -86,6 +87,7 @@
 <!-- <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script> -->
 <script src="./js/lib/jquery-1.11.0.min.js"></script>
 <script src="js/lib/jquery.touchSwipe.min.js"></script>
+<script src="js/lib/OverlayScrollbars.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous">
 </script>
