--- a/contactUs.html
+++ b/contactUs.html
@@ -12,16 +12,16 @@
   <link rel="stylesheet" href="./css/main.css">
   <link rel="stylesheet" href="./css/media.css">
   <link rel="stylesheet" href="./css/about.css">
+  <link rel="stylesheet" href="./css/lib/OverlayScrollbars.css">
   <!--  <link rel="stylesheet" href="./css/main_test.css">-->
 
   <title>About Staff</title>
 </head>
 
-<body>
+<body style="overflow: auto">
 
 <!-- navbar start  -->
 <div class="nav-fixed">
-
   <div class="container">
     <nav class="heder-nav">
 
@@ -35,9 +35,9 @@
 
       <ul class="nav-list media_hide">
         <li class="nav-link-item"><a href="index.html?reload=false" class="nav-link">Home</a></li>
-        <li class="nav-link-item"><a href="javascript:void(0)" class="nav-link ">About</a></li>
+        <li class="nav-link-item"><a href="about.html" class="nav-link ">About</a></li>
         <li class="nav-link-item"><a href="javascript:void(0)" class="nav-link active">Contact us</a></li>
-        <li class="nav-link-item"><a href="#" class="nav-link">Blog</a></li>
+        <li class="nav-link-item"><a href="project.html" class="nav-link">Project</a></li>
       </ul>
       <div class='nav-toggle'>
         <span></span>
@@ -54,29 +54,165 @@
 <div class="contact_us_main">
   <div class="bg_fon"></div>
   <div class="bg-baner">
+    <div class="container-fluid">
       <div class="baner_title">
         <h2 class="hi_content">HELLO</h2>
-        <p class="baner_description">Fill in the below form to get along with us! It becomes a lot more amazing when we get together.</p>
+        <p class="baner_description">Fill in the below form to get along with us! It becomes a lot more amazing when we
+          get together.</p>
       </div>
-    <div class="contact_form">
-      <form>
-        <div class="row">
-          <div class="col-6">
+      <div class="contact_form">
+        <form>
+          <div class="row">
+            <div class="col-md-6 col-12">
+              <div class="input_block">
+                <input type="text" name="name" class="form-control input_item" placeholder="Name *">
+                <input type="text" name="name" class="form-control input_item" placeholder="Email address *">
+                <input type="text" name="name" class="form-control input_item" placeholder="Phone *">
+              </div>
 
+            </div>
+            <div class="col-md-6 col-12">
+              <div class="textarea_block">
+                <label for="message">Message *</label>
+                <textarea name="message" cols="30" rows="10" id="message"></textarea>
+                <button class="btn btn-outline-green">SEND</button>
+              </div>
+
+            </div>
           </div>
-          <div class="col-6">
+        </form>
+      </div>
+    </div>
 
+  </div>
+  <div class="location_block">
+    <div class="container-fluid">
+      <ul class="nav nav-tabs" id="myTab" role="tablist">
+        <li class="nav-item">
+          <a class="nav-link active" id="armenia-tab" data-toggle="tab" href="#armenia" role="tab"
+             aria-controls="armenia" aria-selected="true">Armenia</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" id="usa-tab" data-toggle="tab" href="#usa" role="tab" aria-controls="usa"
+             aria-selected="false">USA</a>
+        </li>
+      </ul>
+      <div class="tab-content" id="myTabContent">
+        <div class="tab-pane fade show active armenian_office" id="armenia" role="tabpanel"
+             aria-labelledby="armenia-tab">
+          <div class="row">
+            <div class="col-md-7 col-12 pr-md-0">
+              <div class="team_photo">
+                <div class="bg-fone">
+                  <p class="office_address">1 Alek Manukyan, Armenia, Gyumri</p>
+                </div>
+
+              </div>
+            </div>
+            <div class="col-md-5 col-12 pl-md-0">
+              <div class="contact_block">
+                <div class="phone_block">
+                  <span class="phone_icon"><i class="fas fa-phone-alt"></i></span>
+                  <p class="phone_number">+374 35 -45-55</p>
+                </div>
+                <span class="line"></span>
+                <div class="mail_block">
+                  <span class="mail_icon"><i class="far fa-envelope"></i></span>
+                  <p class="mail_name">info@brainfors.com</p>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
-      </form>
+        <div class="tab-pane fade use_office" id="usa" role="tabpanel" aria-labelledby="usa-tab">
+          <p class="coming_soon">COMING SOON</p>
+        </div>
+      </div>
     </div>
+
   </div>
+  <footer class="footer">
+    <div class="container-fluid text-left">
+      <div class="row mb-3">
+        <div class="col-4">
+          <div class="footer_item_main item1">
+            <h4 class="item_title">CONTACT INFO</h4>
+            <div class="footer_address_block footer_colum">
+              <span class="icon_colum"><img src="./img/addressFlag.svg" alt=""></span>
+              <div class="address_content colum_content">
+                <p class="address_title">ADDRESS</p>
+                <span class="full_address">123 Street Name, City, England</span>
+              </div>
+            </div>
+
+            <div class="footer_phone_block footer_colum">
+              <span class="icon_colum"><i class="fas fa-phone-alt"></i></span>
+              <div class="phone_content colum_content">
+                <p class="phone_title">PHONE</p>
+                <span class="full_number">Toll Free (123) 456-7890</span>
+              </div>
+            </div>
+
+            <div class="footer_email_block footer_colum">
+              <span class="icon_colum"><i class="far fa-envelope"></i></span>
+              <div class="email_content colum_content">
+                <p class="email_title">EMAIL</p>
+                <span class="full_email">mail@example.com</span>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-2">
+          <div class="footer_item_main item1">
+            <h4 class="item_title">Account</h4>
+            <ul class="footer_navigation_block">
+              <li class="footer_item"><a class="footer_link" href="#">About us</a></li>
+              <li class="footer_item"><a class="footer_link" href="#">Contact us</a></li>
+              <li class="footer_item"><a class="footer_link" href="#">My Account</a></li>
+              <li class="footer_item"><a class="footer_link" href="#">Order History</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-2">
+          <div class="footer_item_main item1">
+            <h4 class="item_title">Account</h4>
+            <ul class="footer_navigation_block">
+              <li class="footer_item"><a class="footer_link" href="#">About us</a></li>
+              <li class="footer_item"><a class="footer_link" href="#">Contact us</a></li>
+              <li class="footer_item"><a class="footer_link" href="#">My Account</a></li>
+              <li class="footer_item"><a class="footer_link" href="#">Order History</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-4">
+          <div class="footer_item_main item1">
+            <h4 class="item_title">NEWSLETTER</h4>
+            <div class="news_today_block">
+              <p class="news_today_content">Get all the latest information on Events,
+                Sales and Offers. Sign up for newsletter today.</p>
+              <input type="text" class="form-control email_contact">
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <span class="footer_down_line"></span>
+    <div class="footer_down_text">
+      <p class="company_name">© brain fors. 2021. All Rights Reserved</p>
+      <div class="social_icons">
+        <span class="fb_icon"><a href="#"><i class="fab fa-facebook-f"></i></a></span>
+        <span class="insta_icon"><a href="#"><i class="fab fa-instagram"></i></a></span>
+        <span class="twiter_icon"><a href="#"><i class="fab fa-twitter"></i></a></span>
+      </div>
+    </div>
+  </footer>
 </div>
 
 
 <!-- <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script> -->
 <script src="./js/lib/jquery-1.11.0.min.js"></script>
 <script src="js/lib/jquery.touchSwipe.min.js"></script>
+<script src="js/lib/OverlayScrollbars.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous">
 </script>
@@ -85,7 +221,6 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"></script>
 <script src="./js/about_scripts.js"></script>
 <!--<script src="./js/script_test.js"></script>-->
-
 </body>
 
 </html>
