--- a/contactUs.html
+++ b/contactUs.html
@@ -190,7 +190,13 @@
             <div class="news_today_block">
               <p class="news_today_content">Get all the latest information on Events,
                 Sales and Offers. Sign up for newsletter today.</p>
-              <input type="text" class="form-control email_contact">
+              <div class="input-group mb-3">
+                <input type="text" class="form-control email_contact">
+                <div class="input-group-append">
+                  <button class="btn btn-secondary" type="button"><i class="fas fa-long-arrow-alt-right"></i></button>
+                </div>
+              </div>
+
             </div>
           </div>
         </div>
