add new contact us page

--- a/contactUs.html
+++ b/contactUs.html
@@ -38,6 +38,8 @@
         <li class="nav-link-item"><a href="about.html" class="nav-link ">About</a></li>
         <li class="nav-link-item"><a href="javascript:void(0)" class="nav-link active">Contact us</a></li>
         <li class="nav-link-item"><a href="project.html" class="nav-link">Project</a></li>
+        <li class="nav-link-item"><a href="aboutUs.html" class="nav-link">About Us</a></li>
+
       </ul>
       <div class='nav-toggle'>
         <span></span>
@@ -87,47 +89,50 @@
   </div>
   <div class="location_block">
     <div class="container-fluid">
-      <ul class="nav nav-tabs" id="myTab" role="tablist">
-        <li class="nav-item">
-          <a class="nav-link active" id="armenia-tab" data-toggle="tab" href="#armenia" role="tab"
-             aria-controls="armenia" aria-selected="true">Armenia</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" id="usa-tab" data-toggle="tab" href="#usa" role="tab" aria-controls="usa"
-             aria-selected="false">USA</a>
-        </li>
-      </ul>
-      <div class="tab-content" id="myTabContent">
-        <div class="tab-pane fade show active armenian_office" id="armenia" role="tabpanel"
-             aria-labelledby="armenia-tab">
-          <div class="row">
-            <div class="col-md-7 col-12 pr-md-0">
-              <div class="team_photo">
-                <div class="bg-fone">
-                  <p class="office_address">1 Alek Manukyan, Armenia, Gyumri</p>
-                </div>
+      <div class="nav_tab_block">
+        <ul class="nav nav-tabs" id="myTab" role="tablist">
+          <li class="nav-item">
+            <a class="nav-link active" id="armenia-tab" data-toggle="tab" href="#armenia" role="tab"
+               aria-controls="armenia" aria-selected="true">Armenia</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" id="usa-tab" data-toggle="tab" href="#usa" role="tab" aria-controls="usa"
+               aria-selected="false">USA</a>
+          </li>
+        </ul>
+        <div class="tab-content" id="myTabContent">
+          <div class="tab-pane fade show active armenian_office" id="armenia" role="tabpanel"
+               aria-labelledby="armenia-tab">
+            <div class="row">
+              <div class="col-md-7 col-12 pr-md-0">
+                <div class="team_photo">
+                  <div class="bg-fone">
+                    <p class="office_address">1 Alek Manukyan, Armenia, Gyumri</p>
+                  </div>
 
-              </div>
-            </div>
-            <div class="col-md-5 col-12 pl-md-0">
-              <div class="contact_block">
-                <div class="phone_block">
-                  <span class="phone_icon"><i class="fas fa-phone-alt"></i></span>
-                  <p class="phone_number">+374 35 -45-55</p>
                 </div>
-                <span class="line"></span>
-                <div class="mail_block">
-                  <span class="mail_icon"><i class="far fa-envelope"></i></span>
-                  <p class="mail_name">info@brainfors.com</p>
+              </div>
+              <div class="col-md-5 col-12 pl-md-0">
+                <div class="contact_block">
+                  <div class="phone_block">
+                    <span class="phone_icon"><i class="fas fa-phone-alt"></i></span>
+                    <p class="phone_number">+374 35 -45-55</p>
+                  </div>
+                  <span class="line"></span>
+                  <div class="mail_block">
+                    <span class="mail_icon"><i class="far fa-envelope"></i></span>
+                    <p class="mail_name">info@brainfors.com</p>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
-        </div>
-        <div class="tab-pane fade use_office" id="usa" role="tabpanel" aria-labelledby="usa-tab">
-          <p class="coming_soon">COMING SOON</p>
+          <div class="tab-pane fade use_office" id="usa" role="tabpanel" aria-labelledby="usa-tab">
+            <p class="coming_soon">COMING SOON</p>
+          </div>
         </div>
       </div>
+
     </div>
 
   </div>
