--- a/project.html
+++ b/project.html
@@ -38,6 +38,8 @@
         <li class="nav-link-item"><a href="javascript:void(0)" class="nav-link active">About</a></li>
         <li class="nav-link-item"><a href="contactUs.html" class="nav-link">Contact us</a></li>
         <li class="nav-link-item"><a href="javascript:void(0)" class="nav-link">Project</a></li>
+        <li class="nav-link-item"><a href="aboutUs.html" class="nav-link">About Us</a></li>
+
       </ul>
       <div class='nav-toggle'>
         <span></span>
