--- a/project.html
+++ b/project.html
@@ -20,7 +20,7 @@
 <body>
 
 <!-- navbar start  -->
-<div class="nav-fixed">
+<div class="nav-fixed default_nav-bar">
 
   <div class="container">
     <nav class="heder-nav project_nav-toggle">
@@ -34,11 +34,11 @@
       </a>
 
       <ul class="nav-list media_hide">
-        <li class="nav-link-item"><a href="index.html?reload=false" class="nav-link">Home</a></li>
-        <li class="nav-link-item"><a href="javascript:void(0)" class="nav-link active">About</a></li>
-        <li class="nav-link-item"><a href="contactUs.html" class="nav-link">Contact us</a></li>
-        <li class="nav-link-item"><a href="javascript:void(0)" class="nav-link">Project</a></li>
-        <li class="nav-link-item"><a href="aboutUs.html" class="nav-link">About Us</a></li>
+        <li class="nav-link-item"><a href="index.html?reload=false" class="nav-link">Home</a><span class="underline_link"></span></li>
+        <li class="nav-link-item"><a href="javascript:void(0)" class="nav-link">About</a><span class="underline_link"></span></li>
+        <li class="nav-link-item"><a href="contactUs.html" class="nav-link">Contact us</a><span class="underline_link"></span></li>
+        <li class="nav-link-item active"><a href="javascript:void(0)" class="nav-link">Project</a><span class="underline_link"></span></li>
+        <li class="nav-link-item"><a href="aboutUs.html" class="nav-link">About Us</a><span class="underline_link"></span></li>
 
       </ul>
       <div class='nav-toggle'>
