add project page data

--- a/project.html
+++ b/project.html
@@ -12,7 +12,6 @@
   <link rel="stylesheet" href="./css/project.css">
   <link rel="stylesheet" href="./css/main.css">
   <link rel="stylesheet" href="./css/media.css">
-  <link rel="stylesheet" href="./css/lib/OverlayScrollbars.css">
 
   <title>About Staff</title>
 </head>
@@ -61,12 +60,13 @@
       <div class="carousel_navigation">
         <div class="navigation_block">
           <ul class="carousel_view_number">
-            <li class="view_item active"><span>01</span> <span class="active_line"></span></li>
-            <li class="view_item"><span>02</span> <span class="active_line"></span></li>
-            <li class="view_item"><span>03</span> <span class="active_line"></span></li>
-            <li class="view_item"><span>04</span> <span class="active_line"></span></li>
-            <li class="view_item"><span>05</span> <span class="active_line"></span></li>
-            <li class="view_item">ALL WORKS</li>
+            <li class="view_item 1 active"><span>01</span> <span class="active_line"></span></li>
+            <li class="view_item 2"><span>02</span> <span class="active_line"></span></li>
+            <li class="view_item 3"><span>03</span> <span class="active_line"></span></li>
+            <li class="view_item 4"><span>04</span> <span class="active_line"></span></li>
+            <li class="view_item 5"><span>05</span> <span class="active_line"></span></li>
+            <li class="view_item 6"><span></span> <span class="active_line"></span></li>
+<!--            <li class="view_item">ALL WORKS</li>-->
           </ul>
         </div>
       </div>
@@ -84,30 +84,7 @@
           <div class="project_slide">
             <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
               <div class="carousel-inner">
-                <div class="carousel-item active">
-                  <div class="carousel_fon"></div>
-                  <img class="d-block " src="./img/1.jpg" alt="First slide">
-                </div>
-                <div class="carousel-item">
-                  <div class="carousel_fon"></div>
-                  <img class="d-block " src="./img/5.jpg" alt="Second slide">
-                </div>
-                <div class="carousel-item">
-                  <div class="carousel_fon"></div>
-                  <img class="d-block " src="./img/6.jpg" alt="Third slide">
-                </div>
-                <div class="carousel-item">
-                  <div class="carousel_fon"></div>
-                  <img class="d-block " src="./img/2.jpg" alt="Third slide">
-                </div>
-                <div class="carousel-item">
-                  <div class="carousel_fon"></div>
-                  <img class="d-block " src="./img/about-body.jpg" alt="Third slide">
-                </div>
-                <div class="carousel-item">
-                  <div class="carousel_fon"></div>
-                  <img class="d-block " src="./img/about-header.jpg" alt="Third slide">
-                </div>
+
               </div>
               <div class="slide_navigation_block">
                 <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
@@ -143,17 +120,17 @@
 
       <div class="down_line_section">
         <h4 class="section_title">CLIENT</h4>
-        <p class="section_text">Many</p>
+        <p class="section_text count1">Many</p>
       </div>
 
       <div class="down_line_section">
         <h4 class="section_title">INDUSTRY</h4>
-        <p class="section_text">Commercial</p>
+        <p class="section_text count2">Commercial</p>
       </div>
 
       <div class="down_line_section">
         <h4 class="section_title">SECTOR</h4>
-        <p class="section_text">Corporate</p>
+        <p class="section_text count3">Corporate</p>
       </div>
 
 
@@ -166,7 +143,6 @@
 <!-- <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script> -->
 <script src="./js/lib/jquery-1.11.0.min.js"></script>
 <script src="js/lib/jquery.touchSwipe.min.js"></script>
-<script src="js/lib/OverlayScrollbars.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous">
 </script>
