--- a/project.html
+++ b/project.html
@@ -35,7 +35,7 @@
 
       <ul class="nav-list media_hide">
         <li class="nav-link-item"><a href="index.html?reload=false" class="nav-link">Home</a><span class="underline_link"></span></li>
-        <li class="nav-link-item"><a href="javascript:void(0)" class="nav-link">About</a><span class="underline_link"></span></li>
+        <li class="nav-link-item"><a href="about.html" class="nav-link">About</a><span class="underline_link"></span></li>
         <li class="nav-link-item"><a href="contactUs.html" class="nav-link">Contact us</a><span class="underline_link"></span></li>
         <li class="nav-link-item active"><a href="javascript:void(0)" class="nav-link">Project</a><span class="underline_link"></span></li>
         <li class="nav-link-item"><a href="aboutUs.html" class="nav-link">About Us</a><span class="underline_link"></span></li>
@@ -74,12 +74,8 @@
       <div class="carousel_content">
         <div class="about_project">
           <div class="project_content_block">
-            <h2 class="project_name">High Security Spaces & Data Centers</h2>
-            <p class="project_description">
-              Many of our projects cannot be featured in this section due to the Security levels of the space.
-              Maman's team is all background checked, and trained to provide the best product with the strictest
-              deadlines and toughest of specifications.
-            </p>
+            <h2 class="project_name"></h2>
+            <p class="project_description"></p>
           </div>
 
           <div class="project_slide">
@@ -90,7 +86,6 @@
               <div class="slide_navigation_block">
                 <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
                   <i class="fas fa-chevron-left"></i>
-
                 </a>
                 <span class="center_line"></span>
                 <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
