new page portfolio

--- a/project.html
+++ b/project.html
@@ -14,7 +14,7 @@
   <link rel="stylesheet" href="./css/media.css">
   <link rel="stylesheet" href="./css/lib/OverlayScrollbars.css">
 
-  <title>About Staff</title>
+  <title>Project</title>
 </head>
 
 <body>
