--- a/contactUs.html
+++ b/contactUs.html
@@ -38,6 +38,7 @@
         <li class="nav-link-item"><a href="about.html" class="nav-link ">About</a></li>
         <li class="nav-link-item"><a href="javascript:void(0)" class="nav-link active">Contact us</a></li>
         <li class="nav-link-item"><a href="project.html" class="nav-link">Project</a></li>
+        <li class="nav-link-item"><a href="portfolio.html" class="nav-link">portfolio</a><span class="underline_link"></span></li>
         <li class="nav-link-item"><a href="aboutUs.html" class="nav-link">About Us</a></li>
 
       </ul>
