--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         <li class="nav-link-item"><a href="about.html" class="nav-link">About</a></li>
         <li class="nav-link-item"><a href="contactUs.html" class="nav-link">Contact us</a></li>
         <li class="nav-link-item"><a href="project.html" class="nav-link">Project</a></li>
+        <li class="nav-link-item"><a href="portfolio.html" class="nav-link">portfolio</a><span class="underline_link"></span></li>
         <li class="nav-link-item"><a href="aboutUs.html" class="nav-link">About Us</a></li>
       </ul>
       <div class='nav-toggle'>
