--- a/about.html
+++ b/about.html
@@ -39,6 +39,7 @@
         <li class="nav-link-item active"><a href="javascript:void(0)" class="nav-link ">About</a><span class="underline_link"></span></li>
         <li class="nav-link-item"><a href="contactUs.html" class="nav-link">Contact us</a><span class="underline_link"></span></li>
         <li class="nav-link-item"><a href="project.html" class="nav-link">Project</a><span class="underline_link"></span></li>
+        <li class="nav-link-item"><a href="portfolio.html" class="nav-link">portfolio</a><span class="underline_link"></span></li>
         <li class="nav-link-item mr-0"><a href="aboutUs.html" class="nav-link">About Us</a><span class="underline_link"></span></li>
       </ul>
       <div class='nav-toggle'>
