--- a/about.html
+++ b/about.html
@@ -36,11 +36,17 @@
 
       <ul class="nav-list media_hide">
         <li class="nav-link-item"><a href="index.html?reload=false" class="nav-link">Home</a><span class="underline_link"></span></li>
-        <li class="nav-link-item active"><a href="javascript:void(0)" class="nav-link ">About</a><span class="underline_link"></span></li>
+        <li class="nav-link-item active nav-link-dropdown">
+          <a href="javascript:void(0)" class="nav-link">How We Are</a>
+          <ul class="dropdown_links">
+            <li class="nav-link-item"><a href="aboutUs.html" class="nav-link">About Us</a></li>
+            <li class="nav-link-item"><a href="javascript:void(0)" class="nav-link">Meet the team</a></li>
+          </ul>
+          <span class="underline_link"></span>
+        </li>
         <li class="nav-link-item"><a href="contactUs.html" class="nav-link">Contact us</a><span class="underline_link"></span></li>
         <li class="nav-link-item"><a href="project.html" class="nav-link">Project</a><span class="underline_link"></span></li>
         <li class="nav-link-item"><a href="portfolio.html" class="nav-link">portfolio</a><span class="underline_link"></span></li>
-        <li class="nav-link-item mr-0"><a href="aboutUs.html" class="nav-link">About Us</a><span class="underline_link"></span></li>
       </ul>
       <div class='nav-toggle'>
         <span></span>
@@ -76,7 +82,68 @@
             </div>
           </div>
         </div>
-        <div class="row" id="workers">
+        <div class="workers_block" id="workers">
+
+          <div class="worker_content">
+            <img src="img/staff/Mher.jpg" alt="photo" class="worker_img">
+            <div class="worker_about">
+              <h2 class="worker__name">Mher Frangyan</h2>
+              <p class="worker__role">Frontend Developer</p>
+            </div>
+          </div>
+
+          <div class="worker_content">
+            <img src="img/staff/Mher.jpg" alt="photo" class="worker_img">
+            <div class="worker_about">
+              <h2 class="worker__name">Mher Frangyan</h2>
+              <p class="worker__role">Frontend Developer</p>
+            </div>
+          </div>
+
+            <div class="worker_content">
+              <img src="img/staff/Mher.jpg" alt="photo" class="worker_img">
+              <div class="worker_about">
+                <h2 class="worker__name">Mher Frangyan</h2>
+                <p class="worker__role">Frontend Developer</p>
+              </div>
+            </div>
+
+          <div class="worker_content">
+            <img src="img/staff/Mher.jpg" alt="photo" class="worker_img">
+            <div class="worker_about">
+              <h2 class="worker__name">Mher Frangyan</h2>
+              <p class="worker__role">Frontend Developer</p>
+            </div>
+          </div>
+
+          <div class="worker_content ">
+            <img src="img/staff/Mher.jpg" alt="photo" class="worker_img">
+            <div class="worker_about">
+              <h2 class="worker__name">Mher Frangyan</h2>
+              <p class="worker__role">Frontend Developer</p>
+            </div>
+          </div>
+
+          <div class="worker_content ">
+            <img src="img/staff/Mher.jpg" alt="photo" class="worker_img">
+            <div class="worker_about">
+              <h2 class="worker__name">Mher Frangyan</h2>
+              <p class="worker__role">Frontend Developer</p>
+            </div>
+          </div>
+
+          <div class="worker_content ">
+          <img src="img/staff/Mher.jpg" alt="photo" class="worker_img">
+          <div class="worker_about">
+            <h2 class="worker__name">Mher Frangyan</h2>
+            <p class="worker__role">Frontend Developer</p>
+          </div>
+        </div>
+
+
+
+
+
 
         </div>
       </div>
@@ -96,7 +163,8 @@
 <script src="https://kit.fontawesome.com/4286680757.js" crossorigin="anonymous"></script>
 <script src="./js/script.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"></script>
-<script src="./js/about_scripts.js"></script>
+<!--<script src="./js/about_scripts"></script>-->
+<script src="js/test_about.js"></script>
 <!--<script src="./js/script_test.js"></script>-->
 
 </body>
