--- a/index.html
+++ b/index.html
@@ -33,11 +33,17 @@
 
       <ul class="nav-list media_hide">
         <li class="nav-link-item"><a href="javascript:void(0)" class="nav-link active">Home</a></li>
-        <li class="nav-link-item"><a href="about.html" class="nav-link">About</a></li>
+        <li class="nav-link-item nav-link-dropdown">
+          <a href="javascript:void(0)" class="nav-link">How We Are</a>
+          <ul class="dropdown_links">
+            <li class="nav-link-item"><a href="aboutUs.html" class="nav-link">About Us</a></li>
+            <li class="nav-link-item"><a href="about.html" class="nav-link">Meet the team</a></li>
+          </ul>
+          <span class="underline_link"></span>
+        </li>
         <li class="nav-link-item"><a href="contactUs.html" class="nav-link">Contact us</a></li>
         <li class="nav-link-item"><a href="project.html" class="nav-link">Project</a></li>
         <li class="nav-link-item"><a href="portfolio.html" class="nav-link">portfolio</a><span class="underline_link"></span></li>
-        <li class="nav-link-item"><a href="aboutUs.html" class="nav-link">About Us</a></li>
       </ul>
       <div class='nav-toggle'>
         <span></span>
