--- a/portfolio.html
+++ b/portfolio.html
@@ -36,15 +36,19 @@
       <ul class="nav-list media_hide">
         <li class="nav-link-item"><a href="index.html?reload=false" class="nav-link">Home</a><span
           class="underline_link"></span></li>
-        <li class="nav-link-item"><a href="about.html" class="nav-link">About</a><span class="underline_link"></span>
+        <li class="nav-link-item nav-link-dropdown">
+          <a href="javascript:void(0)" class="nav-link">How We Are</a>
+          <ul class="dropdown_links">
+            <li class="nav-link-item"><a href="aboutUs.html" class="nav-link">About Us</a></li>
+            <li class="nav-link-item"><a href="about.html" class="nav-link">Meet the team</a></li>
+          </ul>
+          <span class="underline_link"></span>
         </li>
         <li class="nav-link-item"><a href="contactUs.html" class="nav-link">Contact us</a><span
           class="underline_link"></span></li>
         <li class="nav-link-item"><a href="project.html" class="nav-link">Project</a><span
           class="underline_link"></span></li>
         <li class="nav-link-item active"><a href="javascript:void(0)" class="nav-link">portfolio</a><span
-          class="underline_link"></span></li>
-        <li class="nav-link-item"><a href="aboutUs.html" class="nav-link">About Us</a><span
           class="underline_link"></span></li>
 
       </ul>
