add how we work page

--- a/contactUs.html
+++ b/contactUs.html
@@ -43,10 +43,10 @@
           </ul>
           <span class="underline_link"></span>
         </li>
-        <li class="nav-link-item"><a href="javascript:void(0)" class="nav-link active">Contact us</a></li>
+        <li class="nav-link-item"><a href="javascript:void(0)" class="nav-link active">Contact us<span class="underline_link"></span></a></li>
         <li class="nav-link-item"><a href="project.html" class="nav-link">Project</a></li>
-        <li class="nav-link-item"><a href="portfolio.html" class="nav-link">portfolio</a><span class="underline_link"></span></li>
-
+        <li class="nav-link-item"><a href="portfolio.html" class="nav-link">portfolio</a></li>
+        <li class="nav-link-item"><a href="how-we-work.html" class="nav-link">How we work</a></li>
       </ul>
       <div class='nav-toggle'>
         <span></span>
@@ -220,7 +220,7 @@
       <div class="social_icons">
         <span class="fb_icon"><a href="#"><i class="fab fa-facebook-f"></i></a></span>
         <span class="insta_icon"><a href="#"><i class="fab fa-instagram"></i></a></span>
-        <span class="twiter_icon"><a href="#"><i class="fab fa-twitter"></i></a></span>
+        <span class="linkedin_icon"><a href="#"><i class="fab fa-linkedin-in"></i></a></span>
       </div>
     </div>
   </footer>
@@ -237,7 +237,7 @@
 <script src="https://kit.fontawesome.com/4286680757.js" crossorigin="anonymous"></script>
 <script src="./js/script.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"></script>
-<script src="./js/about_scripts.js"></script>
+<script src="js/contactUs.js"></script>
 <!--<script src="./js/script_test.js"></script>-->
 </body>
 
