--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
         </li>
         <li class="nav-link-item"><a href="contactUs.html" class="nav-link">Contact us</a></li>
         <li class="nav-link-item"><a href="project.html" class="nav-link">Project</a></li>
-        <li class="nav-link-item"><a href="portfolio.html" class="nav-link">portfolio</a><span class="underline_link"></span></li>
+        <li class="nav-link-item"><a href="portfolio.html" class="nav-link">portfolio</a></li>
+        <li class="nav-link-item"><a href="how-we-work.html" class="nav-link">How we work</a></li>
       </ul>
       <div class='nav-toggle'>
         <span></span>
