--- a/portfolio.html
+++ b/portfolio.html
@@ -46,10 +46,9 @@
         </li>
         <li class="nav-link-item"><a href="contactUs.html" class="nav-link">Contact us</a><span
           class="underline_link"></span></li>
-        <li class="nav-link-item"><a href="project.html" class="nav-link">Project</a><span
-          class="underline_link"></span></li>
-        <li class="nav-link-item active"><a href="javascript:void(0)" class="nav-link">portfolio</a><span
-          class="underline_link"></span></li>
+        <li class="nav-link-item"><a href="project.html" class="nav-link">Project</a><span class="underline_link"></span></li>
+        <li class="nav-link-item active"><a href="javascript:void(0)" class="nav-link">portfolio</a><span class="underline_link"></span></li>
+        <li class="nav-link-item"><a href="how-we-work.html" class="nav-link">How we work</a><span class="underline_link"></span></li>
 
       </ul>
       <div class='nav-toggle'>
