--- a/about.html
+++ b/about.html
@@ -47,6 +47,7 @@
         <li class="nav-link-item"><a href="contactUs.html" class="nav-link">Contact us</a><span class="underline_link"></span></li>
         <li class="nav-link-item"><a href="project.html" class="nav-link">Project</a><span class="underline_link"></span></li>
         <li class="nav-link-item"><a href="portfolio.html" class="nav-link">portfolio</a><span class="underline_link"></span></li>
+        <li class="nav-link-item"><a href="how-we-work.html" class="nav-link">How we work</a><span class="underline_link"></span></li>
       </ul>
       <div class='nav-toggle'>
         <span></span>
@@ -69,75 +70,74 @@
       <div class="carousel_staff staff_view ">
         <div class="row">
           <div class="col-12 loader_carousel">
+            <i class="fas fa-angle-left"></i>
             <div class="circle">
               <div class="circle__item">
-                <i class="fas fa-redo circle__icon"></i>
+
                 <svg class="circle__spinner" viewBox="0 0 50 50">
-                  <circle cx="25" cy="25" r="20" fill="none" stroke="rgba(0,0,0,0.3)" stroke-width="1">
-                  </circle>
+<!--                  <circle cx="25" cy="25" r="20" fill="none" stroke="rgba(0,0,0,0.3)" stroke-width="1">-->
+<!--                  </circle>-->
                   <circle class="path" cx="25" cy="25" r="20" fill="none" stroke="#93bfec" stroke-width="1">
                   </circle>
                 </svg>
               </div>
             </div>
+            <i class="fas fa-angle-right"></i>
           </div>
         </div>
         <div class="workers_block" id="workers">
 
           <div class="worker_content">
-            <img src="img/staff/Mher.jpg" alt="photo" class="worker_img">
+            <img src="" alt="photo" class="worker_img">
             <div class="worker_about">
-              <h2 class="worker__name">Mher Frangyan</h2>
-              <p class="worker__role">Frontend Developer</p>
+              <h2 class="worker__name"></h2>
+              <p class="worker__role"></p>
             </div>
           </div>
-
           <div class="worker_content">
-            <img src="img/staff/Mher.jpg" alt="photo" class="worker_img">
+            <img src="" alt="photo" class="worker_img">
             <div class="worker_about">
-              <h2 class="worker__name">Mher Frangyan</h2>
-              <p class="worker__role">Frontend Developer</p>
+              <h2 class="worker__name"></h2>
+              <p class="worker__role"></p>
             </div>
           </div>
-
-            <div class="worker_content">
-              <img src="img/staff/Mher.jpg" alt="photo" class="worker_img">
-              <div class="worker_about">
-                <h2 class="worker__name">Mher Frangyan</h2>
-                <p class="worker__role">Frontend Developer</p>
-              </div>
-            </div>
-
           <div class="worker_content">
-            <img src="img/staff/Mher.jpg" alt="photo" class="worker_img">
+            <img src="" alt="photo" class="worker_img">
             <div class="worker_about">
-              <h2 class="worker__name">Mher Frangyan</h2>
-              <p class="worker__role">Frontend Developer</p>
+              <h2 class="worker__name"></h2>
+              <p class="worker__role"></p>
+            </div>
+          </div>
+          <div class="worker_content">
+            <img src="" alt="photo" class="worker_img">
+            <div class="worker_about">
+              <h2 class="worker__name"></h2>
+              <p class="worker__role"></p>
+            </div>
+          </div>
+          <div class="worker_content">
+            <img src="" alt="photo" class="worker_img">
+            <div class="worker_about">
+              <h2 class="worker__name"></h2>
+              <p class="worker__role"></p>
+            </div>
+          </div>
+          <div class="worker_content">
+            <img src="" alt="photo" class="worker_img">
+            <div class="worker_about">
+              <h2 class="worker__name"></h2>
+              <p class="worker__role"></p>
+            </div>
+          </div>
+          <div class="worker_content">
+            <img src="" alt="photo" class="worker_img">
+            <div class="worker_about">
+              <h2 class="worker__name"></h2>
+              <p class="worker__role"></p>
             </div>
           </div>
 
-          <div class="worker_content ">
-            <img src="img/staff/Mher.jpg" alt="photo" class="worker_img">
-            <div class="worker_about">
-              <h2 class="worker__name">Mher Frangyan</h2>
-              <p class="worker__role">Frontend Developer</p>
-            </div>
-          </div>
 
-          <div class="worker_content ">
-            <img src="img/staff/Mher.jpg" alt="photo" class="worker_img">
-            <div class="worker_about">
-              <h2 class="worker__name">Mher Frangyan</h2>
-              <p class="worker__role">Frontend Developer</p>
-            </div>
-          </div>
-
-          <div class="worker_content ">
-          <img src="img/staff/Mher.jpg" alt="photo" class="worker_img">
-          <div class="worker_about">
-            <h2 class="worker__name">Mher Frangyan</h2>
-            <p class="worker__role">Frontend Developer</p>
-          </div>
         </div>
 
 
@@ -164,7 +164,7 @@
 <script src="./js/script.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"></script>
 <!--<script src="./js/about_scripts"></script>-->
-<script src="js/test_about.js"></script>
+<script src="js/about.js"></script>
 <!--<script src="./js/script_test.js"></script>-->
 
 </body>
